# biteme

./: .flake8  .gitignore  .python-version  CHANGELOG.md  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: pre_release.yml  release.yml  tests.yml
src/: biteme.py
src/biteme/: __init__.py  __main__.py  bites.py  cli.py  pybites.py
tests/: conftest.py  test_acceptance.py  test_biteme.py  test_cli.py
tests/fixtures/: module.py
