[tool.poetry]
authors = ["Will Frey <jfrey89@gmail.com>"]
description = ""
license = "MIT"
name = "biteme"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.7"

click = "^7.1.2"
more-itertools = "^8.7.0"
requests = "^2.25.1"
typing-extensions = { version = "^3.7.4", python = "<3.8" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
pytest-randomly = "^3.5.0"
isort = "^5.7.0"
black = { git = "https://github.com/psf/black.git", branch = "master" }
mypy = "^0.812"
flake8 = "^3.8.4"
autoflake = "^1.4"
ipykernel = "^5.5.0"

[tool.poetry.scripts]
biteme = "biteme:cli"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]


[tool.black]
target-version = ["py37", "py38", "py39"]
line-length = 88

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true
lines_after_imports = 2
