[tool.poetry]
name = "biteme"
version = "0.1.0"
description = "biteme"
authors = ["Will Frey <jfrey89@gmail.com>"]
license = "MIT"
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.8"

more-itertools = "^8.7.0"
requests = "^2.25.1"
typer = { version = "^0.3.2", extras = ["all"] }

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
bandit = "^1.7.0"
black = "^20.8b1"
coverage = { version = "^5.5", extras = ["toml"] }
flake8 = "^3.8.4"
ipykernel = "^5.5.0"
isort = "^5.7.0"
mypy = "^0.812"
nox = "^2020.12.31"
nox-poetry = "^0.8.1"
pylint = "^2.7.1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
pytest-randomly = "^3.5.0"
rope = "^0.18.0"
wemake-python-styleguide = "^0.15.1"

[tool.poetry.scripts]
biteme = "biteme:cli"

[tool.black]


[tool.isort]
profile = "black"
combine_as_imports = true

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["biteme"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
