[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
name = "biteme"
version = "0.1.0"
description = "biteme"
authors = ["Will Frey <jfrey89@gmail.com>"]
readme = "README.md"

classifiers = ["Typing :: Typed"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = { version = "^1.8.2", extras = ["dotenv"] }
requests = "^2.26.0"
typer = { version = "^0.4.0", extras = ["all"] }
platformdirs = "^2.4.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
ipykernel = "^6.4.1"
isort = "^5.9.3"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
rope = "^0.20.1"
pytest-randomly = "^3.10.1"

[tool.poetry.scripts]
biteme = "biteme:cli"


[tool.black]
target-version = ["py38", "py39"]
experimental-string-processing = true


[tool.isort]
profile = "black"
force_single_line = true
order_by_type = false
skip_gitignore = true


[tool.mypy]
warn_redundant_casts = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
sqlite_cache = true

[[tool.mypy.overrides]]
module = "biteme"
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
implicit_reexport = false


[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-continue-on-failure"
